refactor: minor adjustments

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,7 @@ quarkus.http.auth.permission.health.paths=/q/*
 quarkus.http.auth.permission.health.policy=permit
 quarkus.http.auth.permission.default.paths=/*
 quarkus.http.auth.permission.default.policy=authenticated
-quarkus.http.host=0.0.0.0
-quarkus.http.port=9094
-
 onecx.permissions.application-id=${quarkus.application.name}
-onecx.permissions.product-name=${quarkus.application.name}
 
 # propagate the apm-principal-token from requests we receive
 org.eclipse.microprofile.rest.client.propagateHeaders=apm-principal-token
@@ -16,15 +12,25 @@ org.eclipse.microprofile.rest.client.propagateHeaders=apm-principal-token
 %prod.quarkus.oidc-client.client-id=${quarkus.application.name}
 
 # DEV
+## This configuration assumes that you have a local running keycloak instance with a realm of OneCX
+%dev.tkit.security.auth.enabled=false
+%dev.tkit.rs.context.tenant-id.mock.enabled=false
+%dev.tkit.log.json.enabled=false
+%dev.tkit.oidc.health.enabled=false
+%dev.quarkus.oidc.token.issuer=http://keycloak-app/realms/onecx
+%dev.quarkus.oidc.auth-server-url=http://keycloak-app:8080/realms/onecx
+%dev.quarkus.rest-client.onecx_permission.url=http://onecx-permission-svc:8080
+##
+
+%dev.quarkus.http.host=0.0.0.0
+%dev.quarkus.http.port=9094
+%dev.onecx.permissions.product-name=${quarkus.application.name}
 %dev.quarkus.oidc-client.auth-server-url=${quarkus.oidc.auth-server-url}
 %dev.quarkus.oidc-client.client-id=${quarkus.oidc.client-id}
 %dev.quarkus.oidc-client.credentials.secret=${quarkus.oidc.credentials.secret}
-%dev.quarkus.rest-client.onecx_permission.url=${quarkus.mockserver.endpoint}
+#%dev.quarkus.rest-client.onecx_permission.url=${quarkus.mockserver.endpoint}
 %dev.quarkus.mockserver.devservices.config-file=src/test/resources/mockserver.properties
 %dev.quarkus.mockserver.devservices.config-dir=src/test/resources/mockserver
-
-# BUILD
-quarkus.openapi-generator.codegen.input-base-dir=target/tmp/openapi
 
 # INTEGRATION TEST
 quarkus.test.integration-test-profile=test
